--- a/css/index.css
+++ b/css/index.css
@@ -121,3 +121,9 @@ h2{
 	height: auto;
 	padding-bottom: 20px;
 }
+.section4>p{
+	position:absolute;
+	left:50%;
+	bottom:10px;
+	text-align:center;
+}
